[package]
name = "miner-rs"
version = "0.1.0"
license = "GPL-3.0"
authors = ["RandChain https://github.com/rand-chain/"]
description = "RandChain: Decentralised Randomness Beacon from Sequential Proof-of-Work. https://eprint.iacr.org/2020/1033.pdf"

[dependencies]
clap = { package = "clap-v3", version = "3.0.0-beta.1" }  # todo: replace with official v3 when it's released to crates.io
ureq = { version = "2.1.1", features = ["json", "charset"] }
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
serde_json = "1.0"
ecvrf = "0.4.2"
chan = "0.1.23"
rustc-hex = "2"
log = "0.4"
env_logger = "0.5"
app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
libc = "0.2"
chain = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
db = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
logs = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
message = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
miner = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"}
network = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
p2p = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
primitives = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"}
rpc = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
serialization = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
serialization_derive = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
storage = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
sync = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
vdf = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }
verification = { git = "https://github.com/rand-chain/rust-randchain.git", rev="7bc4fba3bbead2326ef1b59fc8e25b6dd07fd93f"  }

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true

[[bin]]
name = "miner"
path = "bin/main.rs"
