[package]
name = "miner-rs"
version = "0.1.0"
license = "GPL-3.0"
authors = ["RandChain https://github.com/rand-chain/"]
description = "RandChain: Decentralised Randomness Beacon from Sequential Proof-of-Work. https://eprint.iacr.org/2020/1033.pdf"

[dependencies]
clap = { package = "clap-v3", version = "3.0.0-beta.1" }  # todo: replace with official v3 when it's released to crates.io
ureq = { version = "2.1.1", features = ["json", "charset"] }
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
serde_json = "1.0"
ecvrf = "0.4.2"
chan = "0.1.23"
rustc-hex = "2"
log = "0.4"
env_logger = "0.5"
app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
libc = "0.2"
chain = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
db = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
logs = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
message = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
miner = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"}
network = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
p2p = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
primitives = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"}
rpc = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
serialization = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
serialization_derive = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
storage = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
sync = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
vdf = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }
verification = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "dev"  }

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true

[[bin]]
name = "miner"
path = "bin/main.rs"
