[package]
name = "miner-rs"
version = "0.1.0"
license = "GPL-3.0"
authors = ["RandChain https://github.com/rand-chain/"]
description = "RandChain: Decentralised Randomness Beacon from Sequential Proof-of-Work. https://eprint.iacr.org/2020/1033.pdf"

[dependencies]
clap = { package = "clap-v3", version = "3.0.0-beta.1" }  # todo: replace with official v3 when it's released to crates.io
ureq = { version = "2.1.1", features = ["json", "charset"] }
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
serde_json = "1.0"
ecvrf = "0.4.2"
chan = "0.1.23"
rustc-hex = "2"
log = "0.4"
env_logger = "0.5"
app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
libc = "0.2"
chain = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
db = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
logs = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
message = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
miner = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"}
network = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
p2p = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
primitives = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"}
rpc = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
serialization = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
serialization_derive = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
storage = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
sync = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
vdf = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }
verification = { git = "https://github.com/rand-chain/rust-randchain.git", branch = "refactor-block-structure"  }

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true

[[bin]]
name = "miner"
path = "bin/main.rs"
